# OpenHaptics-MinVR3-Server

./: CMakeLists.txt  DESIGN.md  NOTICE  README.md
cmake/: FindOpenHaptics.cmake
example_client/: CMakeLists.txt  main.cpp
example_unity_client/Assets/Scenes/: ExampleForceClient.unity
example_unity_client/Assets/Scripts/: AmbientFrictionForceEffect.cs  AmbientViscousForceEffect.cs  HapticWorkspace.cs  LineConstraintForceEffect.cs  PhantomForceClient.cs  PointConstraintForceEffect.cs  SurfaceConstraintForceEffect.cs  SurfaceContactForceEffect.cs  TangentPlaneForceEffect.cs
example_unity_client/Assets/Scripts/Examples/: BranchWalker.cs  LichenTouchEffect.cs  PointAnimation.cs  PointFieldExample.cs  PointFollowerExample.cs  PointGizmo.cs
example_unity_client/Logs/: ApiUpdaterCheck.txt
example_unity_client/ProjectSettings/: ProjectSettings.asset
example_unity_client/UserSettings/: EditorUserSettings.asset
server_src/: CMakeLists.txt  ambient_friction.cpp  ambient_friction.h  ambient_viscous.cpp  ambient_viscous.h  event_mgr.cpp  event_mgr.h  force_effect.h  force_messages.h  graphics.cpp  graphics.h  graphics_headers.h  line_constraint.cpp  line_constraint.h  main.cpp  open_haptics.h  phantom.cpp  phantom.h  point_constraint.cpp  point_constraint.h  surface_constraint.cpp  surface_constraint.h  surface_contact.cpp  surface_contact.h  tangent_plane_constraint.cpp  tangent_plane_constraint.h
